Auth model credentials model refactoring